[package]
name = "os_path"
version = "0.3.0"
edition = "2021"
description = "Intelligent path handling with std lib interoperability"
documentation = "https://docs.rs/os_path"
repository = "https://github.com/granitDev/os_path"
license = "MIT OR Apache-2.0"
keywords = ["path", "paths", "os", "pathbuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
